--- a/backend/client/package.json
+++ b/backend/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "leaflet-geosearch": "^2.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-leaflet": "^2.2.1",
+    "react-leaflet-search": "^0.6.0",
     "react-scripts": "3.0.0"
   },
   "scripts": {
@@ -29,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-polyfill": "^6.26.0"
   }
 }
