--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.4.0",
     "leaflet": "^1.4.0",
     "morgan": "~1.9.0",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "request": "^2.88.0"
   }
 }
