--- a/backend/client/package.json
+++ b/backend/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "leaflet-geosearch": "^2.7.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-leaflet": "^2.2.1",
@@ -33,6 +34,8 @@
     ]
   },
   "devDependencies": {
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "css-loader": "^2.1.1",
+    "style-loader": "^0.21.0"
   }
 }
